--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -1,3 +1,4 @@
+---
 repository:
   private: false
   has_issues: true
@@ -10,27 +11,26 @@ repository:
   allow_rebase_merge: true
   delete_branch_on_merge: true
   archived: false
-
 branches:
-  - name: master
-    protection:
-      required_pull_request_reviews:
-        required_approving_review_count: 1
-        dismiss_stale_reviews: true
-        require_code_owner_reviews: true
-      required_status_checks:
-        strict: true
-        contexts: ['continuous-integration/travis-ci']
-      enforce_admins: null
-      restrictions: null
-      required_signatures: true
-  - name: modulesync
-    protection:
-      required_pull_request_reviews: null
-      required_status_checks:
-        strict: true
-        contexts: ['continuous-integration/travis-ci']
-      enforce_admins: true
-      restrictions: null
-      required_signatures: true
+- name: master
+  protection:
+    required_pull_request_reviews:
+      required_approving_review_count: 1
+      dismiss_stale_reviews: true
+      require_code_owner_reviews: true
+    required_status_checks:
+      strict: true
+      contexts: []
+    enforce_admins: null
+    restrictions: null
+    required_signatures: true
+- name: modulesync
+  protection:
+    required_pull_request_reviews: null
+    required_status_checks:
+      strict: true
+      contexts: []
+    enforce_admins: null
+    restrictions: null
+    required_signatures: true
 
