--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -12,12 +12,21 @@ repository:
   delete_branch_on_merge: true
   archived: false
 branches:
-- name: master
+- name: *
   protection:
     required_pull_request_reviews:
       required_approving_review_count: 1
       dismiss_stale_reviews: true
       require_code_owner_reviews: true
+    required_status_checks:
+      strict: true
+      contexts: []
+    enforce_admins: null
+    restrictions: null
+    required_signatures: true
+- name: master
+  protection:
+    required_pull_request_reviews: null
     required_status_checks:
       strict: true
       contexts: []
@@ -33,4 +42,3 @@ branches:
     enforce_admins: null
     restrictions: null
     required_signatures: true
-
