--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -12,7 +12,7 @@ repository:
   delete_branch_on_merge: true
   archived: false
 branches:
-- name: *
+- name: "*"
   protection:
     required_pull_request_reviews:
       required_approving_review_count: 1
