--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -9,14 +9,15 @@ repository:
   allow_squash_merge: true
   allow_merge_commit: true
   allow_rebase_merge: true
-  archived: true
+  delete_branch_on_merge: false
+  archived: false
 branches:
 - name: master
   protection:
     required_pull_request_reviews: null
     required_status_checks:
       strict: true
-      contexts: []
+      contexts: ['continuous-integration/travis-ci']
     enforce_admins: null
     restrictions: null
     required_signatures: true
@@ -25,7 +26,7 @@ branches:
     required_pull_request_reviews: null
     required_status_checks:
       strict: true
-      contexts: []
+      contexts: ['continuous-integration/travis-ci']
     enforce_admins: null
     restrictions: null
     required_signatures: true
